--- a/src/style/portrait.css
+++ b/src/style/portrait.css
@@ -31,7 +31,7 @@
   line-height: 80px;
   display: flex;
   box-shadow: 0 0 18px #d4d2d2;
-  width: 800px;
+  width: 640px;
   float: left;
   color: #444444;
 }
@@ -54,7 +54,7 @@ margin: 14px auto;
   text-indent: 30px;
 }
 .header button{
-  width: 140px;
+  width: 130px;
   height: 80px;
   background-color: #10859d;
   color: #fff;
@@ -63,6 +63,28 @@ margin: 14px auto;
   float: right;
   font-size: 17px;
   cursor: pointer;
+}
+.header .synchronization{
+  width: 170px;
+  height: 80px;
+  background-color: #10859d;
+  color: #fff;
+  border-radius: 4px;
+  float: right;
+  font-size: 17px;
+  cursor: pointer;
+  margin-right: 10px;
+  text-align: center;
+}
+.header .synchronization .one{
+  
+  line-height: 60px;
+  height: 52px;
+}
+.header .synchronization .two{
+  font-size: 14px;
+  line-height: 26px;
+  
 }
 .noData{
   height:50px;
