--- a/src/style/portrait.css
+++ b/src/style/portrait.css
@@ -43,9 +43,9 @@
 }
 .titleBox div img{
     display: block;
-margin: 0 auto;
-width: 100%;
-height: 100%;
+margin: 10px auto;
+width: 80%;
+height: 80%;
 border-radius: 50px;
 }
 .header .titleBox p:nth-child(2),.titleBox p:nth-child(3){
